Fixes Typo in CH4

--- a/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
+++ b/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
@@ -163,10 +163,10 @@ Cette description sera peut-être encore étoffée.
 \addcontentsline{toc}{section}{Conclusion}
 Dans cette partie vous avez appris :
 \begin{itemize}
-\item À faire calculer votre ordinateur.
+\item à faire calculer votre ordinateur.
 \item ce qu'est le modulo pour un informaticien.
-\item Ce que sont le priorités.
-\item Ce qu'est (en gros) une fonction et comment l'utiliser
+\item ce que sont le priorités.
+\item ce qu'est (en gros) une fonction et comment l'utiliser
 \end{itemize}
 \section*{Exercices}
 \phantomsection
