Fixe Typo in CH5, adds conclusion and exercice

--- a/Reference/Character/SpecialCharacter.tex
+++ b/Reference/Character/SpecialCharacter.tex
@@ -1,7 +1,7 @@
 % à vérifier
 % Source : C99 last draft.
 \verb"\\" & permet d'insérer un \verb"\" sans qu'il soit interprété. \\ \hline
-\verb"\0" & Caractère nul. Utilisé en C pour marquer la fin d'une chaine, en Swift il est implement ignoré. \\ \hline
+\verb"\0" & Caractère nul. Utilisé en C pour marquer la fin d'une chaine, en Swift il est simplement ignoré. \\ \hline
 \verb"\n" & Nouvelle ligne.(Unix) \\ \hline
 \verb"\r" & Retour chariot.(Utilisé sur d'autres systèmes) \\ \hline
 \verb"\t" & Tabulation horizontale. \\ \hline
