--- a/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
+++ b/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
@@ -166,7 +166,7 @@ Dans cette partie vous avez appris :
 \item à faire calculer votre ordinateur.
 \item ce qu'est le modulo pour un informaticien.
 \item ce que sont le priorités.
-\item ce qu'est (en gros) une fonction et comment l'utiliser
+c\item ce qu'est (en gros) une fonction et comment l'utiliser
 \end{itemize}
 \section*{Exercices}
 \phantomsection
