--- a/P1-LesBasesImperatives/CH6-LesBooleens/Chapter.tex
+++ b/P1-LesBasesImperatives/CH6-LesBooleens/Chapter.tex
@@ -129,7 +129,7 @@ on utilise \verb"==". Attention à bien mettre \emph{deux} signes égal, pour di
 On peut, entre autre, l'appliquer à des entiers, des nombres à virgule et des chaînes de caractères.
 \subsection{Relation d'ordre}
 Pour un certain nombre d'objet, il y a du sens à les ordonner.
-Je vous passe la définition mathématique qui correspond, mais pour les types entiers et les nombres à virgule flottante.
+Je vous passe la définition mathématique qui correspond, mais pour les types entiers et les nombres à virgule flottante la définition est bien celle que vous connaissez du primaire.
 Ils sont au nombre de 4 :
 \begin{itemize}
 \item \verb">", strictement supérieur à,
